fix code by review

--- a/G4_DailyReport/src/main/resources/templates/managers/components/sidebar.html
+++ b/G4_DailyReport/src/main/resources/templates/managers/components/sidebar.html
@@ -30,10 +30,10 @@
                 Departments
                 </a>
                 
-                <a th:href="@{/manager/projects-management}" class="nav-item nav-link"
+                <a th:href="@{/manager/projects-management/}" class="nav-item nav-link"
                  th:classappend="${activeLink == 'projetcs' ? 'active' : ''}">
                  <i class="fas fa-project-diagram me-2">
-				 </i>Projects</a>
+				 </i>Project Members</a>
 
                 <a th:href="@{/manager/reports}" class="nav-item nav-link"
                    th:classappend="${activeLink == 'reports' ? 'active' : ''}">
